--- a/ArmRobot/Packages/manifest.json
+++ b/ArmRobot/Packages/manifest.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
-    "com.unity.ext.nunit": "1.0.0",
-    "com.unity.ide.rider": "2.0.1",
-    "com.unity.ide.vscode": "1.2.0",
-    "com.unity.test-framework": "1.1.13",
-    "com.unity.textmeshpro": "3.0.0-preview.1",
+    "com.unity.ai.navigation": "1.1.0-pre.1",
+    "com.unity.collections": "1.2.4",
+    "com.unity.ext.nunit": "1.0.6",
+    "com.unity.ide.rider": "3.0.15",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.jobs": "0.70.0-preview.7",
+    "com.unity.ml-agents": "file:/home/jack/Downloads/ml-agents-release_19/com.unity.ml-agents",
+    "com.unity.ml-agents.extensions": "file:/home/jack/Downloads/ml-agents-release_19/com.unity.ml-agents.extensions",
+    "com.unity.test-framework": "1.1.33",
+    "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
